--- a/src/pages/Login/LoginPage.css
+++ b/src/pages/Login/LoginPage.css
@@ -35,11 +35,10 @@
     background-color: #fff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    overflow: hidden;
+    overflow: hidden;  
     max-width: 800px;
     height: 500px;
     width: 100%;
-   
   }
 
   .login-card-left {
@@ -97,7 +96,10 @@
     font-size: 16px;
     
   }
-  
+  .textBox-border{
+    border-left: solid;
+    border-left-color: #e77c75;
+  }
   button {
     background-color: #e77c75; 
     color: #fff;
