--- a/src/pages/Home1.css
+++ b/src/pages/Home1.css
@@ -310,7 +310,7 @@ input {
     transition: 0.2s ease-in-out;
     font-size: 14px;
     color: black; /* Placeholder label color */
-    background: white;
+    /* background: white; */
     padding: 0 3px; 
    }
   
@@ -329,7 +329,7 @@ input {
     top: 8px;
     font-size: 14px;
     color: #007bff; /* Placeholder label color */
-    background: white;
+    /* background: white; */
     padding: 0 3px;
   }
 
